Stop the audio renderer in WebMediaPlayerMS when stream becomes inactive.

This allows freeing up resources when a MediaStream becomes inactive.
This is largely a performance optimization.
A test is added to make sure that the code path is exercised and nothing
breaks. Spec-wise the old code was correct as well, but kept using unneeded
external resources such as PulseAudio until a Blink garbage collection was
performed.
Since Blink does not account for these external resources it can take a while
until the media element is garbage collected.

Bug: 843913
Change-Id: I60532e90132a7318e7080b8f24a2de914874863c
Reviewed-on: https://chromium-review.googlesource.com/1065899
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560624}
Former-commit-id: f70464bfe6075f027d25de156ad50c4e196eb5b0